# BEM

BemSolver/: CMakeLists.txt  ExpLog.cpp  ExpLog.h  INSTALL  LinkDef.h  ReadMe.txt  bem.cpp  bem.h  bem2d.cpp  bem2d.h  bemsolver.vcproj  build_dict_cxx.sh  calcp.c  dict2.cpp  driver.c  f2c.h  fastlap.c  ksalloc.c  ksalloc.h  lapack.h  linearPaulTrap.cxx  linearPaulTrap_edit.cxx  md5.cpp  md5.hpp  mulDisplay.c  mulGlobal.c  mulGlobal.h  mulLocal.c  mulMats.c  mulMulti.c  mulSetup.c  ringTrap.cxx  ringTrap.dxf  ringTrap_edit.cxx  stdafx.cpp  stdafx.h  uglyalloc.c
